# Auth

./: .env  .gitignore  Dockerfile  compose.yaml  pyproject.toml
client_app/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
client_app/app/: dependencies.py  init_admin.py  main.py
client_app/app/messaging/: publisher.py
client_app/app/routers/: main_router.py
client_app/app/security/: cert_manager.py  jwt_utils.py  keys.py
client_app/app/sql/: crud.py  database.py  models.py  schemas.py
db_volume/: clients.db
src/auth/: __init__.py  events.py  global_vars.py  keys.py  logging.ini
src/auth/messaging/: __init__.py  global_vars.py
src/auth/routers/: __init__.py  routers.py
src/auth/sql/: __init__.py  crud.py  models.py  schemas.py
